--- a/C++/单例模板类.md
+++ b/C++/单例模板类.md
@@ -1,7 +1,7 @@
-#### 概 述
-之前有讨论过单例模式的实现([C++ 单例模式](https://www.jianshu.com/p/7ca3af70130c))，然而在实际开发中，将多个类做成单例，需要对每一个进行改造，造成重复劳动。我们可以使用模板类来避免重复劳动。
+## 概 述
+之前有讨论过单例模式的实现([C++ 单例模式](./C++%20单例模式.md))，然而在实际开发中，将多个类做成单例，需要对每一个进行改造，造成重复劳动。我们可以使用模板类来避免重复劳动。
 
-#### 实 现
+## 实 现
 使用 `Meyers' Singleton`，可以很快的实现单例模板类，如下：
 ```
 // Singleton.h
@@ -26,7 +26,7 @@ ClassType * Singleton<ClassType>::instance()
     return &s_singleton;
 }
 ```
-#### 使 用
+## 使 用
 有了单例模板类，使用起来就很方便
 ```
 // Log.h
