--- a/LeetCode/约瑟夫环.md
+++ b/LeetCode/约瑟夫环.md
@@ -1,9 +1,9 @@
-#### 概 述
+## 概 述
 上周Leetcode周赛的第二题 [找出游戏的获胜者](https://leetcode-cn.com/problems/find-the-winner-of-the-circular-game/)，是一道经典的约瑟夫环问题。  
 **大致题意：** n个人围成一圈(编号从1到n)，从第1个人开始报数，报到m的人出列，从下一个人重新报数，报到m的人出列，依此类推，直至最后一个人。求最后一个人的编号。  
 利用不同的数据结构，约瑟夫环有多种解法。这里主要介绍最简单的模拟和数学法。
 
-#### 模 拟
+## 模 拟
 最简单的方法就是模拟整个过程。代码不多说，如下：
 ```
 int findTheWinner(int n, int k) {
@@ -21,18 +21,18 @@ int findTheWinner(int n, int k) {
 }
 ```
 
-#### 数学法
+## 数学法
 数学方法时通过倒推来求出胜利者在第一轮时的编号。  
-我们令第一轮时，n个人的编号为`[0, 1, 2, ... n - 1]`，去除第k个人后，第二轮的编号如下：
+我们令第一轮时，n个人的编号为 `[0, 1, 2, ... n - 1]`，去除第k个人后，第二轮的编号如下：
 ```
 人             1   2   3  ...  k-1   k  k+1  k+2  ...   n
 第一轮游戏编号  0   1   2  ...  k-2  k-1  k   k+1  ...  n-1 
 第二轮游戏编号 n-k n-k+1   ...  n-1   无  0    1   ...  n-k   
 ```
-当经历n-1轮后，此时只剩下1个人(胜利者)，在第n轮，其编号一定是0。所以我们令`f(1) = 0`，即最后一轮游戏时(第n轮)，胜利者的编号为0。  
-倒推第n-1轮，此时，有2个人，胜利者此轮的编号为`f(2) = (f(1) + k) % 2`。  
-倒推第n-2轮，此时，有3个人，胜利者此轮的编号为`f(3) = (f(2) + k) % 3`。  
-不难看出递推公式：`f(n) = (f(n - 1) + k) % n`  
+当经历n-1轮后，此时只剩下1个人(胜利者)，在第n轮，其编号一定是0。所以我们令 `f(1) = 0`，即最后一轮游戏时(第n轮)，胜利者的编号为0。  
+倒推第n-1轮，此时，有2个人，胜利者此轮的编号为 `f(2) = (f(1) + k) % 2`。  
+倒推第n-2轮，此时，有3个人，胜利者此轮的编号为 `f(3) = (f(2) + k) % 3`。  
+不难看出递推公式：`f(n) = (f(n - 1) + k) % n`    
 因此，代码如下：  
 ```
 int findTheWinner(int n, int k) {
