--- a/OpenCV/图像细化(四)--基于索引表的细化算法.md
+++ b/OpenCV/图像细化(四)--基于索引表的细化算法.md
@@ -1,7 +1,7 @@
-#### 前言
-本文介绍图像细化算法之**基于索引表的细化算法**。
+## 前 言
+本文介绍图像细化算法之 **基于索引表的细化算法**。
 
-#### 算法原理
+## 算法原理
 设当前被处理的像素为p0，使用以下所示方式来表示当前像素的八邻域，背景像素值为0(黑色)，前景像素值为255(白色)，为了方便计算，在算法过程中将前景像素值当作1来计算。
 ```
 p8  p1  p2
@@ -35,7 +35,7 @@ unsigned char deletemark[256] = {
 **1.** 遍历图像，找轮廓点，将其值值为5(这个值没有具体要求，这里只是为了方便还原细化后的前景为白色255，这里设为255/51)  
 **2.** 查找所有轮廓，查找上文的索引表判断能否删除，能删除的话将其值置为0。
 
-#### 实现
+## 实 现
 根据上文的算法步骤，实现的代码如下：
 ```
 #include <iostream>
@@ -151,7 +151,8 @@ void main() {
     cv::waitKey(0);
 }
 ```
-#### 效果
+## 效 果
+
 ![原图](https://upload-images.jianshu.io/upload_images/22192996-9444cc9208d74887.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
 ![基于索引表的细化算法](https://upload-images.jianshu.io/upload_images/22192996-f4e48485d469e07d.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
