--- a/Qt/VS2019+qt5.14 实现简单的计算器.md
+++ b/Qt/VS2019+qt5.14 实现简单的计算器.md
@@ -1,15 +1,17 @@
-#### 一、环境的搭建与配置
-#### 1.1 vs2019安装
+## 一、环境的搭建与配置
+### 1.1 vs2019安装
 前往 [Visual Studio官网](https://visualstudio.microsoft.com/zh-hans/vs/whatsnew/) 下载社区版本，并安装。
-#### 1.2 qt 5.14安装
+
+### 1.2 qt 5.14安装
 前往 [qt下载地址](http://download.qt.io/archive/qt/)，选择qt5.14版本，选择 `qt-opensource-windows-x86-5.14.2.exe` 下载安装。
 **注：** 一定要断网安装！！！在安装界面需要你填写qt账号，新版qt已经没有跳过按钮，不填则无法下一步，千万不要填qt账号(否则一个月后，qt项目将无法编译，报错qt许可证验证不通过)，所以请断网安装，则可以跳过填写qt账号。
-#### 1.3 qt VS开发插件安装
+
+### 1.3 qt VS开发插件安装
 前往 [qt VS开发插件下载地址](http://download.qt.io/archive/vsaddin/)，选择最新的版本，选择 `qt-vsaddin-msvc2019-2.5.1.vsix` 下载安装。
 
 注：以上软件下载时遇到速度慢的情况，可以选复制下载链接，使用迅雷下载，速度极快。
 
-#### 1.4 VS配置qt
+### 1.4 VS配置qt
 安装完以上软件，打开vs2019，选择 继续但无需代码
 
 ![open vs2019](https://upload-images.jianshu.io/upload_images/22192996-9b5ee12ffa61949d.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
@@ -26,14 +28,15 @@
 
 ![新建qt项目](https://upload-images.jianshu.io/upload_images/22192996-e74bafc7cf0e3068.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
-#### 二、创建qt项目
-因为是最新的qt5，所以选择 `Qt Widgets Application` ，填写项目名称并创建。
-#### 2.1 界面的设计
+## 二、创建qt项目
+因为是最新的qt5，所以选择 `Qt Widgets Application`，填写项目名称并创建。
+
+### 2.1 界面的设计
 双击 `项目名.ui` 文件，在 `Qt Designer` 中设计计算器布局，主要使用 `Push Button` 和 `Text Browser` 控件，并修改其类名和值，大致界面如下：
 
 ![qt ui 界面](https://upload-images.jianshu.io/upload_images/22192996-5530ed5874b9e2ff.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
-#### 2.2 逻辑代码
+### 2.2 逻辑代码
 主要涉及两个文件 `项目名.h` 和 `项目名.cpp`  
 **涉及的问题和知识点：**  
 **中文乱码**  
@@ -105,7 +108,7 @@ void QtWidgetsApplication::on_number_Button_clicked() {
     //...相应的逻辑处理
 }
 ```
-#### 2.3 整体代码
+### 2.3 整体代码
 `项目名.h`文件：
 ```
 #pragma once
@@ -144,7 +147,7 @@ private:
     Ui::QtWidgetsApplicationClass ui;
 };
 ```
-`项目名.cpp`文件：
+`项目名.cpp` 文件：
 ```
 #include "QtWidgetsApplication.h"
 
